--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,1 @@
-<h1>
-  HomePage
-</h1>
-
-<button *ngIf="auth.isLoggedIn" class="btn btn-danger" (click)="auth.logout()">Logout</button>
+<header [title]="'Home Page'"></header>
