--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,8 +1,8 @@
-<main class="m-t-3">
+<main class="m-t-3 space-around">
   <div class="card">
     <div class="card-block">
       <h4 class="card-title">Welcome</h4>
-      <button class="btn btn-primary" (click)="auth.facebookLogin()">Login</button>
+      <button class="btn btn-primary" (click)="auth.login()">Login</button>
     </div>
   </div>
 </main>
