--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -2,3 +2,10 @@
   border: 0;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
+
+bucketlist{
+  .card{
+    width: $bucket-width;
+    height: $bucket-height
+  }
+}
