--- a/src/app/components/buckets/bucketlist/bucketlist.scss
+++ b/src/app/components/buckets/bucketlist/bucketlist.scss
@@ -1,11 +1,10 @@
 ul{
   flex-wrap: wrap;
-}
-
-li{
-  display: block;
-  width: 200px;
-  margin: 0 .25rem;
+  & > * {
+    display: block;
+    width: 200px;
+    margin: 0 .25rem;
+  }
 }
 
 .fake-li{
