--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,4 +1,4 @@
-<main class="m-t-3 space-around">
+<main class="mt-3 space-around">
   <div class="card">
     <div class="card-block">
       <h4 class="card-title">Welcome</h4>
