--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,11 +1,11 @@
-.card{
-  border: 0;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
-
 bucketlist{
   .card{
+    position: relative;
     width: $bucket-width;
-    height: $bucket-height
+    height: $bucket-height;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
+  .card-block{
+    padding:.75rem;
   }
 }
