--- a/src/app/components/transactions/transactionlist/transactionlist.scss
+++ b/src/app/components/transactions/transactionlist/transactionlist.scss
@@ -1,2 +1,7 @@
-table{width: 100%;}
+table{width: 100%;
+  i{font-size:12px;}
+}
 .table-date-lg, .table-amount-lg{width: 175px;}
+.pointer{
+   cursor: pointer;
+}
