working on table styles and adding an edit row

--- a/src/app/components/transactions/transactionlist/transactionlist.html
+++ b/src/app/components/transactions/transactionlist/transactionlist.html
@@ -29,7 +29,7 @@
   </tr>
 </table>
 
-<table *ngIf="transactions.length > 0" class="table table-bordered table-sm hidden-sm-down">
+<!-- <table *ngIf="transactions.length > 0" class="table table-bordered table-sm hidden-sm-down">
   <thead class="thead-default">
     <tr>
       <th class="table-date-lg" (click)="sort = 'date'" [ngClass]="{'pointer': sort !== 'date'}">Date <i class="fa fa-sort pull-right" [ngClass]="{'text-muted': sort !== 'date'}"></i></th>
@@ -42,6 +42,34 @@
       <td class="table-date-lg">{{transaction.date}}</td>
       <td class="table-description-lg">{{transaction.description}}</td>
       <td class="table-amount-lg text-xs-right">${{transaction.amount}}</td>
+    </tr>
+  </tbody>
+</table> -->
+
+<table *ngIf="transactions.length > 0" class="table table-bordered table-sm hidden-sm-down">
+  <thead class="thead-default">
+    <tr>
+      <th class="table-date-lg" (click)="sort = 'date'" [ngClass]="{'pointer': sort !== 'date'}">Date <i class="fa fa-sort pull-right" [ngClass]="{'text-muted': sort !== 'date'}"></i></th>
+      <th class="table-description-lg">Description</th>
+      <th class="table-amount-lg" (click)="sort = '-amount'" [ngClass]="{'pointer': sort !== '-amount'}">Amount <i class="fa fa-sort pull-right" [ngClass]="{'text-muted': sort !== '-amount'}"></i></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let transaction of transactions | orderBy: sort">
+      <td class="hoverable" colspan="3" (click)="transaction.editing != transaction.editing">
+        <table>
+          <tr>
+            <td class="table-date-lg">{{transaction.date}}</td>
+            <td class="table-description-lg">{{transaction.description}}</td>
+            <td class="table-amount-lg text-xs-right">${{transaction.amount}}</td>
+          </tr>
+          <tr *ngIf="transaction.editing">
+              <td colspan="3">
+                row to edit.
+              </td>
+          </tr>
+        </table>
+      </td>
     </tr>
   </tbody>
 </table>
