style hover and editing states

--- a/src/app/components/transactions/transactionlist/transactionlist.html
+++ b/src/app/components/transactions/transactionlist/transactionlist.html
@@ -25,6 +25,7 @@
           </tr>
           <tr *ngIf="transaction.editing">
             <td colspan="2">
+              edit transaction form goes here
               <button class="btn btn-sm btn-danger" (click)="closeEdit($event, transaction)">close</button>
             </td>
           </tr>
@@ -53,6 +54,7 @@
           </tr>
           <tr *ngIf="transaction.editing">
               <td colspan="3">
+                edit transaction form goes here
                 <button class="btn btn-sm btn-danger" (click)="closeEdit($event, transaction)">close</button>
               </td>
           </tr>
