--- a/src/app/pages/bucket/bucket.page.html
+++ b/src/app/pages/bucket/bucket.page.html
@@ -3,21 +3,22 @@
 <div *ngIf="isLoaded">
   <div class="container mt-1">
     <div class="row">
-      <div class="col-sm-9">
+      <div class="col-sm-7">
         <h1>{{month}} <sup class="text-muted">‘{{year}}</sup></h1>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-5">
         <div class="month-controls pull-right">
           <button class="btn btn-warning btn-sm" (click)="selectPreviousMonth()"><i class="fa fa-backward" aria-hidden="true"></i></button>
           <button class="btn btn-primary btn-sm" (click)="selectCurrentMonth()" [disabled]="selectedMonth.endOf('month').format('MM-YY') === currentMoment.endOf('month').format('MM-YY')">
             <i class="fa fa-calendar" aria-hidden="true"></i>
           </button>
           <button class="btn btn-warning btn-sm" (click)="selectNextMonth()"><i class="fa fa-forward" aria-hidden="true"></i></button>
+          <span class="vertical-spacer ml-1 mr-1">|</span>
+          <button class="btn btn-danger btn-sm" (click)="deleteBucket(bucket)"><i class="fa fa-trash" aria-hidden="true"></i></button>
         </div>
       </div>
     </div>
     <transactionlist class="mt-1" [month]="selectedMonth" [key]="bucket.$key"></transactionlist>
   <div>
   <addtransaction [key]="bucket.$key"></addtransaction>
-  <button class="btn btn-danger mt-1" (click)="deleteBucket(bucket)">Delete Bucket</button>
 </div>
