--- a/src/app/components/transactions/transactionlist/transactionlist.scss
+++ b/src/app/components/transactions/transactionlist/transactionlist.scss
@@ -13,18 +13,34 @@ table{
 table.hidden-sm-down{
   tbody{
     .hoverable{
+      position: relative;
       padding: 0;
       border: 0;
       border-spacing: 0;
       &:hover{
-        outline: 1px solid #0275d8;
+        // border: 1px solid #0275d8;
+        box-shadow: 0 0 0 1px #0275d8;
+        z-index: 2;
       }
       &:not(.editing){
         cursor: pointer;
       }
       &.editing{
         cursor: default;
-        outline: 1px solid #f0ad4e;
+        // border: 1px solid #f0ad4e;
+        box-shadow: 0 0 0 1px #f0ad4e;
+        z-index: 1;
+      }
+      & tr:last-child td {
+        // helps position the close button
+        position: relative;
+        padding: 8px;
+        .close{
+          position: absolute;
+          z-index: 1;
+          top: 2px;
+          right: 8px;
+        }
       }
     }
   }
