--- a/src/app/components/transactions/addtransaction/addtransaction.scss
+++ b/src/app/components/transactions/addtransaction/addtransaction.scss
@@ -1,27 +1,33 @@
 form{
-  @media (min-width: 768px){
-    display: flex;
-    justify-content: space-between;
-    &:after{content: none;}
+  @media (max-width:992px){
+    max-width: 500px;
+    margin: 0 auto;
+  }
+  
+  // slight fix for padding on large screens
+  .col-xs-6:last-of-type{
+    padding-left: 0;
+  }
+  @media (min-width:992px) {
+    .col-lg-6:last-of-type{
+      padding-left: 0;
+    }
   }
 }
 input, button{
   max-height: 38px;
 }
-.form-group{
-  margin: 0 5px;
-  flex-grow: 1;
-  flex-basis: 0;
-  min-width: 175px;
-  &.date{
-    margin-left: 0
-  }
-  &.description{
-    flex-grow: 3;
-    min-width: 180px;
-  }
+.description{
+  flex: 1;
 }
 button{
-  margin-left: 5px;
-  align-self: flex-end;
+  margin: 32px 0 0 15px;
+}
+// slight fix for padding on small screens
+@media (max-width: 576px) {
+  .col-xs-6{
+    &:first-child{
+      padding-right: 0;
+    }
+  }
 }
