--- a/src/app/components/transactions/edittransaction/edittransaction.html
+++ b/src/app/components/transactions/edittransaction/edittransaction.html
@@ -1,21 +1,25 @@
-<form #editTransactionForm="ngForm" (ngSubmit)="editTransaction(editTransactionForm)">
+<form #editTransactionForm="ngForm" (ngSubmit)="saveTransaction(editTransactionForm)">
   <div class="row">
-    <div class="col-xs-6">
-      <div class="form-group date">
-        <label for="date">Date</label>
-        <input #firstInput type="date" class="form-control" id="date" name="date" [(ngModel)]="date" required>
-      </div>
-    </div>
-    <div class="col-xs-6">
-      <div class="form-group amount">
-        <label for="amount">Amount</label>
-        <div class="input-group amount">
-          <span class="input-group-addon">$</span>
-          <input type="number" class="form-control" id="amount" name="amount" [(ngModel)]="amount" placeholder="#.##" step=.01 autocomplete="off" required>
+    <div class="col-xs-12 col-lg-6">
+      <div class="row">
+        <div class="col-xs-6">
+          <div class="form-group date">
+            <label for="date">Date</label>
+            <input #firstInput type="date" class="form-control" id="date" name="date" [(ngModel)]="date" required>
+          </div>
+        </div>
+        <div class="col-xs-6">
+          <div class="form-group amount">
+            <label for="amount">Amount</label>
+            <div class="input-group amount">
+              <span class="input-group-addon">$</span>
+              <input type="number" class="form-control" id="amount" name="amount" [(ngModel)]="amount" placeholder="#.##" step="0.01" autocomplete="off" required>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-lg-6 space-between">
       <div class="form-group description">
         <label for="description">Description</label>
         <input type="text" class="form-control" id="description" name="description" [(ngModel)]="description" placeholder="What is this transaction for?" required>
