--- a/src/app/pages/bucket/bucket.page.html
+++ b/src/app/pages/bucket/bucket.page.html
@@ -13,7 +13,7 @@
             <i class="fa fa-calendar" aria-hidden="true"></i>
           </button>
           <button class="btn btn-warning btn-sm" (click)="selectNextMonth()"><i class="fa fa-forward" aria-hidden="true"></i></button>
-          <span class="vertical-spacer ml-1 mr-1">|</span>
+          <span class="vertical-spacer">|</span>
           <button class="btn btn-danger btn-sm" (click)="deleteBucket(bucket)"><i class="fa fa-trash" aria-hidden="true"></i></button>
         </div>
       </div>
