--- a/src/app/components/transactions/transactionlist/transactionlist.scss
+++ b/src/app/components/transactions/transactionlist/transactionlist.scss
@@ -6,6 +6,7 @@ table{
 }
 .table-date-lg{width: 200px;}
 .table-amount-lg{width: 175px;}
+.table-amount-sm{width: 140px;}
 .pointer{
    cursor: pointer;
 }
