--- a/src/app/components/buckets/bucketcard/bucketcard.scss
+++ b/src/app/components/buckets/bucketcard/bucketcard.scss
@@ -1,8 +1,17 @@
 .card{
+	position: relative;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	width: 100%;
+	min-width: 200px;
+	height: 200px;
 	cursor: pointer;
 	&:hover{
 		border-color: #0275d8;
 	}
+
+	.card-block{
+    padding:.75rem;
+  }
 }
 
 .flipped .card{
@@ -51,7 +60,7 @@ button{
 	}
 
 .flip-container {
-	width: 200px;
+	width: 100%;
 	height: 200px;
 }
 
