--- a/src/app/components/buckets/bucketlist/bucketlist.scss
+++ b/src/app/components/buckets/bucketlist/bucketlist.scss
@@ -2,8 +2,14 @@ ul{
   flex-wrap: wrap;
   & > * {
     display: block;
-    width: 200px;
+    width: 100%;
     margin: 0 .25rem;
+    // @media (min-width: 768px) {
+    //   width: 30%;
+    // }
+    @media (min-width: 576px) {
+      width: 200px;
+    }
   }
 }
 
