getting circle charts to work

--- a/src/app/pages/bucket/bucket.page.html
+++ b/src/app/pages/bucket/bucket.page.html
@@ -1,6 +1,8 @@
 <header [homeButton]="true" [title]="bucket?.name"></header>
 <loading *ngIf="!isLoaded"></loading>
 <div *ngIf="isLoaded">
+
+  <circlechart></circlechart>
   <div class="container mt-1">
     <div class="row">
       <div class="col-sm-7">
