--- a/src/app/pages/bucket/bucket.page.html
+++ b/src/app/pages/bucket/bucket.page.html
@@ -1,9 +1,8 @@
 <loading *ngIf="!isLoaded"></loading>
 <header *ngIf="isLoaded" [homeButton]="true" [title]="bucket?.name"></header>
-<div *ngIf="isLoaded">
-
+<div class="pt-3" *ngIf="isLoaded">
   <circlechart [total]="total" [budget]="budget"></circlechart>
-  <div class="container mt-1">
+  <div class="container mt-3">
     <div class="row">
       <div class="col-sm-7">
         <h1>{{month}} <sup class="text-muted">‘{{year}}</sup></h1>
