rearranging add bucket

--- a/src/app/components/buckets/bucketcard/bucketcard.html
+++ b/src/app/components/buckets/bucketcard/bucketcard.html
@@ -1,20 +1,22 @@
 <div class="flip-container mt-1" [ngClass]="{'flipped': isFlipped}">
   <div class="flipper">
     <div class="card card-front" (click)="enterBucket()">
-      <button class="edit-bucketcard btn btn-primary btn-small pull-right" (click)="flip($event)">
+      <button class="btn-close btn btn-primary btn-small pull-right" (click)="flip($event)">
         <i class="fa fa-pencil" aria-hidden="true"></i>
       </button>
       <div class="card-block">
         <h4 class="card-title">{{bucket?.name}}</h4>
-        <circlechart [total]="total" [budget]="bucket.budget" [size]="'small'" [key]="bucket.$key"></circlechart>
+        <div class="card-block p-0">
+          <circlechart [total]="total" [budget]="bucket.budget" [size]="'small'" [key]="bucket.$key"></circlechart>
+        </div>
       </div>
     </div>
     <div class="card card-back card-inverse">
-    <button class="edit-bucketcard btn btn-danger btn-small pull-right" (click)="flip()">
+    <button class="btn-close btn btn-danger btn-small pull-right" (click)="flip()">
       <i class="fa fa-times" aria-hidden="true"></i>
     </button>
       <div class="card-block">
-      <form (ngSubmit)="saveBucket(saveBucketForm, firstInput)" #saveBucketForm="ngForm">
+      <form (ngSubmit)="saveBucket(saveBucketForm, firstInput)" #saveBucketForm="ngForm" class="mt-1">
         <div class="form-group">
           <label for="name">Bucket Name</label>
           <input #firstInput id="name" type="text" class="form-control" name="name" [(ngModel)]="name" autocomplete="off" required>
