--- a/src/app/components/buckets/addbucket/addbucket.scss
+++ b/src/app/components/buckets/addbucket/addbucket.scss
@@ -1,15 +1,22 @@
-.card{
-  height: 200px;
-  .card-block{
-    padding: .75rem;
+#addbucketbutton{
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  @media (min-width: 576px) {
+    bottom: 40px;
+    right: 60px;
   }
 }
+
+#addbucketdrawer{
+  position: fixed;
+  bottom: 0;
+  left: 0; right: 0;
+  width: 100%;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  z-index: 1100;
+}
+
 label{
-  margin-bottom: 0;
-}
-.form-group{
-  margin-bottom: .25rem;
-}
-button{
-  margin-top: .75rem;
+  color: white;
 }
