--- a/src/app/components/buckets/bucketcard/bucketcard.scss
+++ b/src/app/components/buckets/bucketcard/bucketcard.scss
@@ -2,8 +2,8 @@
 	position: relative;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	width: 100%;
-	min-width: 200px;
-	height: 200px;
+	min-width: 240px;
+	height: 240px;
 	cursor: pointer;
 	&:hover{
 		border-color: #0275d8;
@@ -31,19 +31,11 @@ label{
   margin-bottom: 0;
 	color: white;
 }
-.form-group{
-  margin-bottom: .25rem;
-}
-button{
-  margin-top: .75rem;
-}
 
-
-.edit-bucketcard{
-	position: absolute;
-	top: 0; right: 0;
-	margin: 6px 6px 0 0;
-	padding: 0.15rem .35rem;
+form{
+	button{
+	  margin-top: .75rem;
+	}
 }
 
 .card-inverse{
@@ -52,16 +44,24 @@ button{
 
 /* entire container, keeps perspective */
 .flip-container {
+	width: 100%;
+	height: 240px;
 	perspective: 1000px;
 }
-	/* flip the pane when hovered */
-	.flip-container.flipped .flipper {
-		transform: rotateY(-180deg);
-	}
+/* flip the pane when hovered */
+.flip-container.flipped .flipper {
+	transform: rotateY(-180deg);
+}
 
 .flip-container {
 	width: 100%;
-	height: 200px;
+	height: 240px;
+}
+
+@media (max-width: 576px){
+	.flip-container {
+		perspective: 2000px;
+	}
 }
 
 /* flip speed goes here */
