--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -13,3 +13,19 @@
 .vertical-spacer{
   margin: 0 .75rem;
 }
+
+.btn-round{
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  border-radius: 40px;
+  width: 65px;
+  height: 65px;
+}
+
+#overlay{
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1001;
+  background: rgba(0,0,0,0.66);
+}
