--- a/src/app/components/transactions/edittransaction/edittransaction.html
+++ b/src/app/components/transactions/edittransaction/edittransaction.html
@@ -1,4 +1,4 @@
-<button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+<button class="btn btn-sm btn-danger" (click)="deleteTransaction()"><i class="fa fa-trash"></i></button>
 <form #editTransactionForm="ngForm" (ngSubmit)="saveTransaction(editTransactionForm)">
   <div class="row">
     <div class="col-xs-12 col-lg-6">
